# zotero-chunk-mcp

./: .gitignore  .mcp.json  CLAUDE.md  FIX_PLAN.md  LIMITATIONS.md  LIMITATION_FIXES.md  MISSED_CASES.md  NICE_TO_HAVES.md  NORMALIZATION_GAP_ANALYSIS.md  OVERHAUL_PLAN.md  PRODUCTION_SPEC.md  README.md  SHORTCOMINGS.md  STRESS_TEST_REPORT.md  _baseline_corrections.json  _combination_diagnosis.md  _engine_compare.db  _engine_compare_vision_costs.json  _experiment_strategies.py  _experiment_tolerance.py  _inspect_garbled.py  _investigate_hallett.py  _investigate_hallett2.py  _investigate_tables.py  _investigate_tables2.py  _stress_test_output.txt  _test_retry_cost.json  _test_vision_api_costs_2.json  _vision_batch_costs.json  _vision_integration_costs.json  _vision_stage_costs.json  _vision_stage_eval.db  buglog.md  config.example.json  debug_table2_words.py  implementation_plan.md  llm_assessment.md  pyproject.toml  real_life_test.py  stress_test_tables_fix_plan.md  (+2 more)
.omc/: project-memory.json
scripts/: index_library.py  journal_coverage.py  prepare_scimago.py
spec/: .hybrid-state.json  agent_qa_design.md  b1-b2-engine-foundation.md  b3-caption-matching.md  b4-evaluation.md  b5-report-integration.md  b6-production-integration.md  phase-0-dead-code-removal.md  phase-0-demolition.md  phase-1-accuracy-metric-rewrite.md  phase-1-foundation-infrastructure.md  phase-2-combination-engine-rewrite.md  phase-2-ground-truth-creation.md  phase-3-llm-prompt-method.md  phase-4-agent-led-vision-qa-tooling.md  phase-4-validation.md  phase-5-legacy-reference-review.md  pipeline_operators_guide.md  plan.md  progress.md  step-1-caption-detection.md  step-2-vision-extract.md  step-3-api-layer.md  step-4-integration.md  stream-b-plan.md  vision_first.md
tests/: audit_captions.py  conftest.py  create_ground_truth.py  diag_pipeline_methods.py  diagnose_combination.py  extract_table_text.py  ground_truth.db  load_ground_truth.py  pipeline_weights.json  probe_raez_vectors.py  regenerate_review_md.py  split_notes_to_footnotes.py  stress_test_real_library.py  test_ocr.py  (+40 more)
(+547 files in other folders)
