[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-chunk-rag"
version = "0.1.0"
description = "Chunk-level semantic search for Zotero libraries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "google-genai>=1.0.0",
    "pymupdf>=1.25.0",
    "pymupdf-layout",
    "pymupdf4llm>=0.0.17",
    "fastmcp>=2.0.0",
    "tqdm>=4.0.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "opencv-python>=4.0.0",
    "camelot-py>=0.11.0",
    "pdfplumber>=0.11.0",
    "paddlepaddle-gpu>=3.0.0",
    "paddleocr>=3.0.0",
]

[project.optional-dependencies]
vision = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "anthropic>=0.40.0",
]

[project.scripts]
zotero-chunk-rag = "zotero_chunk_rag.server:mcp.run"

[tool.pytest.ini_options]
addopts = "-m 'not vision_api'"
markers = [
    "vision_api: tests that make real Anthropic API calls (run with: pytest -m vision_api)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zotero_chunk_rag = ["data/*.csv"]
